测试通信问题的修复